Fix android centering on mobile

--- a/themes/custom/mgapcdev/styles/_front.scss
+++ b/themes/custom/mgapcdev/styles/_front.scss
@@ -12,13 +12,15 @@
   }
   > div {
     max-width: 400px;
+    margin: 0 auto;
   }
   
 }
 .android-emote {
   height: 100%;
-  
-  margin-left: -50%;
+  @include mq($min, $tablet) {
+    margin-left: -50%;
+  }
   .spinner {
     opacity: 1;
     background-image: url("/icon/loading.svg");
@@ -26,17 +28,24 @@
     background-repeat: no-repeat;
     background-position: center;
     
-    height: 100%;
+    min-height: 150px;
     width: 100%;
     max-width: 400px;
     position: absolute;
+    @include mq($min, $tablet) {
+      height: 100%;
+    }    
     @include transition(opacity 1s);
   }
   img {
     height: 100%;
+    width: 100%;
     opacity: 0;
-    position: absolute;
     @include transition(opacity 1s);
+    @include mq($min, $tablet) {
+      position: absolute;
+      width: auto;
+    }
   }
 }
 .fade-background-svg {
